--- a/app/views/pages/landing.haml
+++ b/app/views/pages/landing.haml
@@ -2,12 +2,14 @@
   .background
   .ui.large.fixed.pointing.menu
     .right.item
-      .ui.button Lorem Ipsum
+      %a(href="https://www.canadahelps.org/en/charities/the-journey-church/")
+        .ui.button Donate
   .ui.text.container
     %h1.ui.inverted.header Lorem Ipsum
     %hr
     %h2 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    .ui.huge.primary.button Lorem Ipsum
+    %a(href="https://www.canadahelps.org/en/charities/the-journey-church/")
+      .ui.huge.primary.button Donate
 .ui.vertical.stripe.segment
   .ui.middle.aligned.stackable.grid.container
     .row
@@ -17,11 +19,20 @@
         %h3.ui.header Lorem Ipsum dolor sit
         %p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       .six.wide.right.floated.column
-        %img.ui.large.bordered.rounded.image(src="assets/images/wireframe/white-image.png")
+        %img.ui.large.bordered.rounded.image(src="http://lorempizza.com/500/500")
     .row
       .center.aligned.column
-        .ui.huge.button Lorem Ipsum
-.ui.vertical.stripe.quote.segment
+        .ui.huge.button Donate
+.ui.vertical.stripe.quote.inverted.segment
+  .ui.equal.width.stackable.internally.celled.grid
+    .center.aligned.row
+      .column
+        %h3 Lorem Ipsum dolor sit
+        %p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+      .column
+        %h3 Lorem Ipsum dolor sit
+        %p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+.ui.vertical.stripe.quote.inverted.segment
   .ui.equal.width.stackable.internally.celled.grid
     .center.aligned.row
       .column
@@ -32,11 +43,21 @@
         %p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
 .ui.vertical.stripe.segment
   .ui.text.container
-    %h3.ui.header Lorem Ipsum dolor sit
+    %h3 Lorem Ipsum dolor sit
     %p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-    %h4.ui.horizontal.header.divider
-      %a(href="#") Lorem
-    %h3.ui.header Lorem Ipsum dolor sit
-    %p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-    %a.ui.large.button Lorem Ipsum dolor sit
+    %h4.ui.horizontal.header.divider Contact Us
+    .ui.equal.width.stackable.internally.celled.grid
+      .center.aligned.row
+        .column
+          %h4 Phone Number
+          %p 1-234-567-8910
+        .column
+          %h4 Email
+          %p example@example.com
+        .column
+          %h4 Address
+          %p
+            Some
+            %br Address
+            Here
 .ui.inverted.vertical.footer.segment
