--- a/app/views/pages/landing.haml
+++ b/app/views/pages/landing.haml
@@ -2,62 +2,121 @@
   .background
   .ui.large.fixed.pointing.menu
     .right.item
-      %a(href="https://www.canadahelps.org/en/charities/the-journey-church/")
-        .ui.button Donate
+      /%a(href="https://www.canadahelps.org/en/charities/the-journey-church/")
+      .ui.basic.button Donate
   .ui.text.container
-    %h1.ui.inverted.header Lorem Ipsum
+    %h1.ui.inverted.header Partners In Hope
     %hr
-    %h2 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    %h2 Greater Moncton Friends For Refugees
     %a(href="https://www.canadahelps.org/en/charities/the-journey-church/")
       .ui.huge.primary.button Donate
 .ui.vertical.stripe.segment
   .ui.middle.aligned.stackable.grid.container
     .row
       .eight.wide.column
-        %h3.ui.header Lorem Ipsum dolor sit
-        %p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        %h3.ui.header Lorem Ipsum dolor sit
-        %p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        %h3.ui.header Our Mission
+        %p
+          We are a team of people under the auspices of The Journey Church who
+          are sponsoring a Syrian refugee family or families to settle in
+          Moncton or surrounding area.
+        %p
+          Sponsoring a family involves providing accommodations, furnishings,
+          clothing, food, and other necessities of life, for the first 12
+          months of their life here. We will also assist the family to adjust
+          to life in Moncton, with a goal of helping them to be self-sufficient
+          by the end of the 12 months.
       .six.wide.right.floated.column
-        %img.ui.large.bordered.rounded.image(src="http://lorempizza.com/500/500")
+        %img.ui.large.bordered.rounded.image(src="/img/ZaatriRefugeeCamp.jpg")
     .row
       .center.aligned.column
-        .ui.huge.button Donate
-.ui.vertical.stripe.quote.inverted.segment
-  .ui.equal.width.stackable.internally.celled.grid
+        %a(href="https://www.canadahelps.org/en/charities/the-journey-church/")
+          .ui.huge.button Donate
+.ui.vertical.stripe.quote.segment
+  .ui.equal.width.stackable.internally.grid.container
+    .row
+      .column
+        %h3 How Can I Help?
+        %p
+          There are two major ways you can help.
+        %p
+          Firstly, there will be many
+          practical tasks that will need to be completed both before and after
+          the family arrives.  Some of the opportunities include:
+        %ul
+          %li Obtaining any necessary clothing
+          %li Helping refugees learn how and where to shop
+          %li Obtaining medical, dental, and eye care
+          %li
+            Help with transportation, employment opportunities, socialization,
+            and many other needs.
+        %p
+          If you would like to help in these ways, please email us at
+          %a(href="mailto://monctonfriendsforrefugees@gmail.com") monctonfriendsforrefugees@gmail.com
+          and indicate particular areas of
+          interest.
+        %p
+          Secondly there is a monetary need.
+        %p
+          The financial commitment to
+          support a refugee family will be approximately $25,000
+          (depending on the size of the family).  Donations can be made to
+          The Journey Church, designating “Syrian Refugee Response”,
+          and are tax-deductible.
+.ui.vertical.stripe.quote.segment
+  .ui.equal.width.stackable.internally.grid
     .center.aligned.row
       .column
-        %h3 Lorem Ipsum dolor sit
-        %p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+        %h3 Donations can be made in several ways
+.ui.vertical.stripe.quote.segment
+  .ui.equal.width.stackable.internally.celled.grid.container
+    .row
       .column
-        %h3 Lorem Ipsum dolor sit
-        %p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-.ui.vertical.stripe.quote.inverted.segment
-  .ui.equal.width.stackable.internally.celled.grid
-    .center.aligned.row
+        %h3 Cheques made out to "The Journey Church"
+        %p
+          Please indicate “Syrian Refugee Fund” in the comments section of the cheque.
+          Mailing address:
+          %p
+            1539 Salisbury Road
+            %br
+            Moncton, NB
+            %br
+            E1E 4P6.
+          %p A tax receipt will be mailed out early in 2017.
       .column
-        %h3 Lorem Ipsum dolor sit
-        %p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+        %h3 Pre-authorized deposit (PAD)
+        %p
+          Visit
+          %a(href="www.onthejourney.ca/Giving.html") our website
+          , Click the “PAD form” button to print the form.  Alternatively,
+          you can contact
+          %a(href="mailto:debbie@onthejourney.ca") debbie@onthejourney.ca
+          to set up a new PAD or change an existing one.
+        %p A tax receipt will be mailed out early in 2017.
       .column
-        %h3 Lorem Ipsum dolor sit
-        %p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+        %h3 Online (using Credit, Visa debit, Interac Online or Paypal)
+        %p
+          Click {here} to donate - Choose the correct option in the dropdown box.
+          You may print your receipt immediately.
 .ui.vertical.stripe.segment
   .ui.text.container
-    %h3 Lorem Ipsum dolor sit
-    %p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-    %h4.ui.horizontal.header.divider Contact Us
-    .ui.equal.width.stackable.internally.celled.grid
-      .center.aligned.row
-        .column
-          %h4 Phone Number
-          %p 1-234-567-8910
-        .column
-          %h4 Email
-          %p example@example.com
-        .column
-          %h4 Address
-          %p
-            Some
-            %br Address
-            Here
+    %p Any money received above our goal will be used to sponsor another family or directly benefit refugees in the camps.
+
 .ui.inverted.vertical.footer.segment
+  %h4.ui.horizontal.centered.header Contact Us
+  .ui.equal.width.stackable.internally.grid
+    .center.aligned.row
+      .column
+        %h4 Phone Number
+        %p 1-234-567-8910
+      .column
+        %h4 Email
+        %p
+          %a(href="mailto:debbie@onthejourney.ca") debbie@onthejourney.ca
+      .column
+        %h4 Address
+        %p
+          1539 Salisbury Road
+          %br
+          Moncton, NB
+          %br
+          E1E 4P6
