Fixed links/emails. Added title

--- a/app/views/layouts/layout.haml
+++ b/app/views/layouts/layout.haml
@@ -1,7 +1,7 @@
 !!!
 %html
 	%head
-		%title Title
+		%title Moncton Friends For Refugees
 		=script('/js/script.js')
 		=script('/js/semantic.min.js')
 		=css('/css/semantic.min.css')
