--- a/app/views/pages/landing.haml
+++ b/app/views/pages/landing.haml
@@ -51,7 +51,7 @@
             and many other needs.
         %p
           If you would like to help in these ways, please email us at
-          %a(href="mailto://monctonfriendsforrefugees@gmail.com") monctonfriendsforrefugees@gmail.com
+          %a(href="mailto:monctonfriendsforrefugees@gmail.com") monctonfriendsforrefugees@gmail.com
           and indicate particular areas of
           interest.
         %p
@@ -86,7 +86,7 @@
         %h3 Pre-authorized deposit (PAD)
         %p
           Visit
-          %a(href="www.onthejourney.ca/Giving.html") our website
+          %a(href="http://www.onthejourney.ca/Giving.html") our website
           , Click the “PAD form” button to print the form.  Alternatively,
           you can contact
           %a(href="mailto:debbie@onthejourney.ca") debbie@onthejourney.ca
@@ -95,7 +95,9 @@
       .column
         %h3 Online (using Credit, Visa debit, Interac Online or Paypal)
         %p
-          Click {here} to donate - Choose the correct option in the dropdown box.
+          Click
+          %a(href="https://www.canadahelps.org/en/charities/the-journey-church/") here
+          to donate - Choose the correct option in the dropdown box.
           You may print your receipt immediately.
 .ui.vertical.stripe.segment
   .ui.text.container
@@ -111,7 +113,7 @@
       .column
         %h4 Email
         %p
-          %a(href="mailto:debbie@onthejourney.ca") debbie@onthejourney.ca
+          %a(href="mailto:monctonfriendsforrefugees@gmail.com") monctonfriendsforrefugees@gmail.com
       .column
         %h4 Address
         %p
