fixed button on top right

--- a/app/views/pages/landing.haml
+++ b/app/views/pages/landing.haml
@@ -2,8 +2,8 @@
   .background
   .ui.large.fixed.pointing.menu
     .right.item
-      /%a(href="https://www.canadahelps.org/en/charities/the-journey-church/")
-      .ui.basic.button Donate
+      %a(href="https://www.canadahelps.org/en/charities/the-journey-church/")
+        .ui.basic.button Donate
   .ui.text.container
     %h1.ui.inverted.header Partners In Hope
     %hr
