--- a/app/views/pages/landing.haml
+++ b/app/views/pages/landing.haml
@@ -1,13 +1,9 @@
 .ui.vertical.masthead.center.aligned.segment
   .background
-  .ui.large.fixed.pointing.menu
-    .right.item
-      %a(href="https://www.canadahelps.org/en/charities/the-journey-church/")
-        .ui.basic.button Donate
   .ui.text.container
-    %h1.ui.inverted.header Partners In Hope
+    %h1.ui.inverted.header Partners Of Hope
     %hr
-    %h2 Greater Moncton Friends For Refugees
+    %h2 Refugee Response Team
     %a(href="https://www.canadahelps.org/en/charities/the-journey-church/")
       .ui.huge.primary.button Donate
 .ui.vertical.stripe.segment
@@ -51,7 +47,7 @@
             and many other needs.
         %p
           If you would like to help in these ways, please email us at
-          %a(href="mailto:monctonfriendsforrefugees@gmail.com") monctonfriendsforrefugees@gmail.com
+          %a(href="mailto:partnersofhoperefugeeresponse@gmail.com") partnersofhoperefugeeresponse@gmail.com
           and indicate particular areas of
           interest.
         %p
@@ -102,23 +98,3 @@
 .ui.vertical.stripe.segment
   .ui.text.container
     %p Any money received above our goal will be used to sponsor another family or directly benefit refugees in the camps.
-
-.ui.inverted.vertical.footer.segment
-  %h4.ui.horizontal.centered.header Contact Us
-  .ui.equal.width.stackable.internally.grid
-    .center.aligned.row
-      .column
-        %h4 Phone Number
-        %p 1-234-567-8910
-      .column
-        %h4 Email
-        %p
-          %a(href="mailto:monctonfriendsforrefugees@gmail.com") monctonfriendsforrefugees@gmail.com
-      .column
-        %h4 Address
-        %p
-          1539 Salisbury Road
-          %br
-          Moncton, NB
-          %br
-          E1E 4P6
