Added facebook button, replace photo with smaller lower res one?

--- a/app/views/pages/landing.haml
+++ b/app/views/pages/landing.haml
@@ -22,7 +22,7 @@
           to life in Moncton, with a goal of helping them to be self-sufficient
           by the end of the 12 months.
       .six.wide.right.floated.column
-        %img.ui.large.bordered.rounded.image(src="/img/ZaatriRefugeeCamp.jpg")
+        %img.ui.bordered.rounded.image(src="/img/Children1.jpg")
     .row
       .center.aligned.column
         %a(href="https://www.canadahelps.org/en/charities/the-journey-church/")
