--- a/app/views/partials/footer.haml
+++ b/app/views/partials/footer.haml
@@ -3,6 +3,12 @@
   .ui.equal.width.stackable.internally.grid
     .center.aligned.row
       .column
+        %h4 Facebook
+        %p
+          %a(href="https://www.facebook.com/partnersofhopemoncton/")
+            %i.large.facebook.square.icon
+            Visit us on facebook
+      .column
         %h4 Email
         %p
           %a(href="mailto:partnersofhoperefugeeresponse@gmail.com") partnersofhoperefugeeresponse@gmail.com
