Fixed casing for logo

--- a/app/views/pages/landing.haml
+++ b/app/views/pages/landing.haml
@@ -14,7 +14,7 @@
       .column
         %img(src="./img/bobs-cool-air-color.jpg")
       .column
-        %img(src="./img/riveroflife.jpg")
+        %img(src="./img/RiverOfLife.JPG")
 .ui.vertical.stripe.segment
   .ui.middle.aligned.stackable.grid.container
     .row
