--- a/app/views/pages/landing.haml
+++ b/app/views/pages/landing.haml
@@ -6,15 +6,7 @@
     %h2 Refugee Response Team
     %a(href="https://www.canadahelps.org/en/charities/the-journey-church/")
       .ui.huge.primary.button Donate
-.ui.vertical.stripe.segment.partners
-  .ui.equal.width.center.aligned.grid.container
-    .row
-      .column
-        %img(src="./img/JourneyChurch.JPG")
-      .column
-        %img(src="./img/bobs-cool-air-color.jpg")
-      .column
-        %img(src="./img/RiverOfLife.JPG")
+=render_partial :partners
 .ui.vertical.stripe.segment
   .ui.middle.aligned.stackable.grid.container
     .row
