Added more logos

--- a/app/views/partials/partners.haml
+++ b/app/views/partials/partners.haml
@@ -7,7 +7,7 @@
         %img(src="./img/bobs-cool-air-color.jpg")
       .column
         %img(src="./img/RiverOfLife.JPG")
-      .column
+      .column.one.wide
         %img(src="./img/beanbear-1.png")
       .column
         %img(src="./img/incolor.png")
@@ -17,3 +17,7 @@
         %img(src="./img/logo-atlanticsuperstore.png")
       .column
         %img(src="./img/Terra Verde_new cut out letters 18497.jpg")
+      .column.one.wide
+        %img(src="./img/bodywise.jpg")
+      .column
+        %img(src="./img/masso.png")
