Removed references to syria

--- a/app/views/pages/landing.haml
+++ b/app/views/pages/landing.haml
@@ -14,7 +14,7 @@
         %h3.ui.header Our Mission
         %p
           We are a team of people under the auspices of The Journey Church who
-          are sponsoring a Syrian refugee family or families to settle in
+          are sponsoring a refugee family or families to settle in
           Moncton or surrounding area.
         %p
           Sponsoring a family involves providing accommodations, furnishings,
@@ -57,7 +57,7 @@
           The financial commitment to
           support a refugee family will be approximately $25,000
           (depending on the size of the family).  Donations can be made to
-          The Journey Church, designating “Syrian Refugee Response”,
+          The Journey Church, designating “Refugee Response”,
           and are tax-deductible.
 .ui.vertical.stripe.quote.segment
   .ui.equal.width.stackable.internally.grid
@@ -70,7 +70,7 @@
       .column
         %h3 Cheques made out to "The Journey Church"
         %p
-          Please indicate “Syrian Refugee Fund” in the comments section of the cheque.
+          Please indicate “Refugee Fund” in the comments section of the cheque.
           Mailing address:
           %p
             1539 Salisbury Road
