Updated to reflect current situation
Changed up text on the main page
Removed the items we need page

--- a/app/views/pages/landing.haml
+++ b/app/views/pages/landing.haml
@@ -17,11 +17,14 @@
           are sponsoring a refugee family or families to settle in
           Moncton or surrounding area.
         %p
-          Sponsoring a family involves providing accommodations, furnishings,
-          clothing, food, and other necessities of life, for the first 12
-          months of their life here. We will also assist the family to adjust
-          to life in Moncton, with a goal of helping them to be self-sufficient
-          by the end of the 12 months.
+          Thank you to everyone who has helped with this project.
+          The sponsored family has been in Moncton since early August and are
+          in the process of adjusting to life in Canada.
+          The children have settled into school and the family is improving their knowledge of both English and French.
+        %p
+          We will be hosting a welcome party in the next few weeks, and everyone who has helped in any way is
+          invited to come, meet the family, and hear some of their story of their journey from Syria to Canada.
+          As soon as we have a date and location set, we'll be posting it on this website and on Facebook.
       .six.wide.right.floated.column
         %img.ui.bordered.rounded.image(src="/img/Children1.jpg")
     .row
@@ -34,31 +37,30 @@
       .column
         %h3 How Can I Help?
         %p
-          There are two major ways you can help.
+          We are looking for lightly used winter clothing:
+          %ul
+            %li
+              %p
+                Girls size 6-7, boots size 13-14.
+                She has a snowsuit, but needs a winter coat, and kids can't have too many mittens,
+                toques, hats, scarves, socks and an extra pair of boots.
+            %li
+              %p
+                Boys size 11-12, boots size 6 - he also has a snowsuit, but again, a winter coat is needed,
+                as well as extra mittens, hats, etc.
+            %li
+              %p
+                Ladies size small (winter coat, boots, and hats, gloves, scarves, etc).
         %p
-          Firstly, there will be many
-          practical tasks that will need to be completed both before and after
-          the family arrives.  Some of the opportunities include:
-        %ul
-          %li Obtaining any necessary clothing
-          %li Helping refugees learn how and where to shop
-          %li Obtaining medical, dental, and eye care
-          %li
-            Help with transportation, employment opportunities, socialization,
-            and many other needs.
+          Also looking for volunteers who would be available to drive to afternoon appointments occasionally.
+          If you can help out, please email Caitlin Dawe at
+          %a(href="mailto:caitlin.dawe@gmail.com") caitlin.dawe@gmail.com
         %p
-          If you would like to help in these ways, please email us at
-          %a(href="mailto:partnersofhoperefugeeresponse@gmail.com") partnersofhoperefugeeresponse@gmail.com
-          and indicate particular areas of
-          interest.
-        %p
-          Secondly there is a monetary need.
-        %p
-          The financial commitment to
-          support a refugee family will be approximately $25,000
-          (depending on the size of the family).  Donations can be made to
-          The Journey Church, designating “Refugee Response”,
-          and are tax-deductible.
+          From a financial perspective, while we have raised all the funds necessary to support the family for
+          their first 12 months, the travel costs to get to Canada were quite a bit higher than expected,
+          due to changes to government policy after March 2016, and also due to some urgency in booking
+          travel out of Lebanon. Because of this, we are still accepting donations to help offset that extra expense.
+
 .ui.vertical.stripe.quote.segment
   .ui.equal.width.stackable.internally.grid
     .center.aligned.row
