Removed paragraphs from list items

--- a/app/views/pages/landing.haml
+++ b/app/views/pages/landing.haml
@@ -40,21 +40,18 @@
           We are looking for lightly used winter clothing:
           %ul
             %li
-              %p
-                Girls size 6-7, boots size 13-14.
-                She has a snowsuit, but needs a winter coat, and kids can't have too many mittens,
-                toques, hats, scarves, socks and an extra pair of boots.
+              Girls size 6-7, boots size 13-14.
+              She has a snowsuit, but needs a winter coat, and kids can't have too many mittens,
+              toques, hats, scarves, socks and an extra pair of boots.
             %li
-              %p
-                Boys size 11-12, boots size 6 - he also has a snowsuit, but again, a winter coat is needed,
-                as well as extra mittens, hats, etc.
+              Boys size 11-12, boots size 6 - he also has a snowsuit, but again, a winter coat is needed,
+              as well as extra mittens, hats, etc.
             %li
-              %p
-                Ladies size small (winter coat, boots, and hats, gloves, scarves, etc).
+              Ladies size small (winter coat, boots, and hats, gloves, scarves, etc).
         %p
           Also looking for volunteers who would be available to drive to afternoon appointments occasionally.
           If you can help out, please email Caitlin Dawe at
-          %a(href="mailto:caitlin.dawe@gmail.com") caitlin.dawe@gmail.com
+          %a(href="mailto:caitlin.daw@gmail.com") caitlin.dawe@gmail.com
         %p
           From a financial perspective, while we have raised all the funds necessary to support the family for
           their first 12 months, the travel costs to get to Canada were quite a bit higher than expected,
