Added info about event

--- a/app/views/pages/landing.haml
+++ b/app/views/pages/landing.haml
@@ -7,6 +7,14 @@
     %a(href="https://www.canadahelps.org/en/charities/the-journey-church/")
       .ui.huge.primary.button Donate
 =render_partial :partners
+.ui.container
+  .row
+  .ui.info.message
+    .header Notice
+    %p
+      Come Celebrate the Story of Hope - how the Atto family made their way to Canada!
+      We will hear the story and have a time of celebration open to anyone who has a heart for this family.
+    %a(href="https://www.eventbrite.ca/e/story-of-hope-celebration-tickets-39094523773") Click here for more information
 .ui.vertical.stripe.segment
   .ui.middle.aligned.stackable.grid.container
     .row
